feat: add share image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Partilhar website-->
   <meta property="og:title" content="Ourivesaria Luciano B">
   <meta property="og:description" content="Ourivesaria Luciano B. Compramos todo tipo de ouro.">
-  <meta property="og:image" content="Imagem">
+  <meta property="og:image" content="https://i.postimg.cc/59vk8SnP/luciano-b.jpg">
   <meta property="og:url" content="https://lucianob.vercel.app">
   <meta name="theme-color" content="#FFFAF5">
   <link rel="shortcut icon" href="/logo.webp" type="image/x-icon">
